<?xml version="1.0" encoding="utf-8"?>
<!--
/* 
**
** Copyright 2008, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License"); 
** you may not use this file except in compliance with the License. 
** You may obtain a copy of the License at 
**
**     http://www.apache.org/licenses/LICENSE-2.0 
**
** Unless required by applicable law or agreed to in writing, software 
** distributed under the License is distributed on an "AS IS" BASIS, 
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
** See the License for the specific language governing permissions and 
** limitations under the License.

*/
-->

<Keyboard xmlns:android="http://schemas.android.com/apk/res/android"
	android:keyWidth="9.8%p" 
	android:horizontalGap="0.2%p"
	android:verticalGap="0.1%p" 
	android:keyHeight="@dimen/key_height">

    <!-- 1line -->
    <Row>
        <Key android:keyLabel="@string/rus_1_1"/>
        <Key android:keyLabel="@string/rus_1_2"/>
        <Key android:keyLabel="@string/rus_1_3"/>
        <Key android:keyLabel="@string/rus_1_4"/>
        <Key android:keyLabel="@string/rus_1_5"/>
        <Key android:keyLabel="@string/rus_1_6"/>
        <Key android:keyLabel="@string/rus_1_7"/>
        <Key android:keyLabel="@string/rus_1_8"/>
        <Key android:keyLabel="@string/rus_1_9"/>
        <Key android:keyLabel="@string/rus_1_10"/>
    </Row>
    <!-- 2line -->
    <Row>
        <Key android:keyLabel="@string/rus_2_1"/>
        <Key android:keyLabel="@string/rus_2_2"/>
        <Key android:keyLabel="@string/rus_2_3"/>
        <Key android:keyLabel="@string/rus_2_4"/>
        <Key android:keyLabel="@string/rus_2_5"/>
        <Key android:keyLabel="@string/rus_2_6"/>
        <Key android:keyLabel="@string/rus_2_7"/>
        <Key android:keyLabel="@string/rus_2_8"/>
        <Key android:keyLabel="@string/rus_2_9"/>
        <Key android:keyLabel="@string/rus_2_10"/>
    </Row>
    <!-- 3line -->
    <Row>
        <Key android:horizontalGap="5.2%p" android:keyLabel="@string/rus_3_1"/>
        <Key android:keyLabel="@string/rus_3_2"/>
        <Key android:keyLabel="@string/rus_3_3"/>
        <Key android:keyLabel="@string/rus_3_4"/>
        <Key android:keyLabel="@string/rus_3_5"/>
        <Key android:keyLabel="@string/rus_3_6"/>
        <Key android:keyLabel="@string/rus_3_7"/>
        <Key android:keyLabel="@string/rus_3_8"/>
        <Key android:keyLabel="@string/rus_3_9"/>
    </Row>
    <Row>
        <Key android:keyWidth="14.8%p" android:codes="@integer/key_shift" android:keyEdgeFlags="left" 
            android:isModifier="true" android:isSticky="true" android:keyIcon="@drawable/key_caps_off" />
        <Key android:keyLabel="@string/rus_4_1"/>
        <Key android:keyLabel="@string/rus_4_2"/>
        <Key android:keyLabel="@string/rus_4_3"/>
        <Key android:keyLabel="@string/rus_4_4"/>
        <Key android:keyLabel="@string/rus_4_5"/>
        <Key android:keyLabel="@string/rus_4_6"/>
        <Key android:keyLabel="@string/rus_4_7"/>
        <Key android:keyWidth="14.8%p" android:codes="@integer/key_back" android:keyEdgeFlags="right" 
            android:isRepeatable="true" android:keyIcon="@drawable/key_delete_n" 
            android:isModifier="true"/>
    </Row>
    
    <Row android:rowEdgeFlags="bottom">
        <Key android:keyWidth="14.8%p" android:codes="@integer/key_hide" android:keyEdgeFlags="left" 
            android:keyIcon="@drawable/key_keyboard_close_n" 
            android:iconPreview="@drawable/key_keyboard_close_n"
            android:isModifier="true"/>
        <Key android:codes="-2" android:keyIcon="@drawable/key_ch_123_n" 
            android:iconPreview="@drawable/key_ch_123_n"
            android:isModifier="true"/>
        <Key android:codes="@integer/key_global" android:keyIcon="@drawable/key_ch_etc_n" 
            android:isModifier="true"/>
        <Key android:keyWidth="39.8%p" android:codes="@integer/key_space" android:isRepeatable="true" 
            android:keyIcon="@drawable/key_spacebar_1_n" android:isModifier="true"/>
        <Key android:keyLabel="@string/label_dot1_key" android:isModifier="true"/>
        <Key android:keyWidth="14.8%p" android:codes="@integer/key_enter" android:keyEdgeFlags="right" 
            android:isModifier="true" android:keyIcon="@drawable/key_enter_bg_n" 
            android:iconPreview="@drawable/key_enter_bg_n"/>
    </Row>
</Keyboard>
    