<?xml version="1.0" encoding="utf-8"?>
<!--
/* 
**
** Copyright 2008, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License"); 
** you may not use this file except in compliance with the License. 
** You may obtain a copy of the License at 
**
**     http://www.apache.org/licenses/LICENSE-2.0 
**
** Unless required by applicable law or agreed to in writing, software 
** distributed under the License is distributed on an "AS IS" BASIS, 
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
** See the License for the specific language governing permissions and 
** limitations under the License.
*/
-->

<Keyboard xmlns:android="http://schemas.android.com/apk/res/android"
	android:keyWidth="9.8%p" 
	android:horizontalGap="0.2%p"
	android:verticalGap="0.1%p" 
	android:keyHeight="@dimen/key_height">

	<Row>
        <Key android:codes="49" android:keyEdgeFlags="left" android:keyLabel="@string/symbol_key_1" />
        <Key android:codes="50" android:keyLabel="@string/symbol_key_2" />
        <Key android:codes="51" android:keyLabel="@string/symbol_key_3" />
        <Key android:codes="52" android:keyLabel="@string/symbol_key_4" />
        <Key android:codes="53" android:keyLabel="@string/symbol_key_5" />
        <Key android:codes="54" android:keyLabel="@string/symbol_key_6" />
        <Key android:codes="55" android:keyLabel="@string/symbol_key_7" />
        <Key android:codes="56" android:keyLabel="@string/symbol_key_8" />
        <Key android:codes="57" android:keyLabel="@string/symbol_key_9" />
        <Key android:codes="48" android:keyEdgeFlags="right" android:keyLabel="@string/symbol_key_10" />
    </Row>
    
    <Row>
        <Key android:horizontalGap="5.2%p" android:codes="43" android:keyEdgeFlags="left"
            android:keyLabel="@string/symbol_key_shift_1_1" />
        <Key android:codes="61" android:keyLabel="@string/symbol_key_shift_1_2"/>
        <Key android:codes="37" android:keyLabel="@string/symbol_key_shift_1_3"/>
        <Key android:keyLabel="@string/symbol_key_shift_1_4"/>
        <Key android:codes="60" android:keyLabel="@string/symbol_key_shift_1_5"/>
        <Key android:codes="62" android:keyLabel="@string/symbol_key_shift_1_6"/>
        <Key android:codes="123" android:keyLabel="@string/symbol_key_shift_1_7"/>
        <Key android:codes="125" android:keyLabel="@string/symbol_key_shift_1_8"/>
        <Key android:codes="124" android:keyLabel="@string/symbol_key_shift_1_9" android:keyEdgeFlags="right"/>
    </Row>
    
    <Row>
        <Key android:codes="@integer/key_shift" android:keyIcon="@drawable/key_caps_on"
                android:keyWidth="14.8%p" android:isModifier="true"
                android:isSticky="true" android:keyEdgeFlags="left"/>
        <Key android:codes="91" android:keyLabel="@string/symbol_key_shift_2_1" />
        <Key android:codes="93" android:keyLabel="@string/symbol_key_shift_2_2"/>
        <Key android:codes="36" android:keyLabel="@string/symbol_key_shift_2_3"/>
        <Key android:codes="165" android:keyLabel="@string/symbol_key_shift_2_4"/>
        <Key android:keyLabel="@string/symbol_key_shift_2_5"/>
        <Key android:codes="95" android:keyLabel="@string/symbol_key_shift_2_6" />
        <Key android:keyLabel="@string/symbol_key_shift_2_7"/>
        <Key android:codes="@integer/key_back" android:keyIcon="@drawable/key_delete_n"
                android:keyWidth="14.8%p" android:keyEdgeFlags="right"
                android:isRepeatable="true"
                android:isModifier="true"/>
    </Row>
    
    <Row android:rowEdgeFlags="bottom">
        <Key android:keyWidth="14.8%p" android:codes="@integer/key_hide" android:keyEdgeFlags="left" 
            android:keyIcon="@drawable/key_keyboard_close_n" android:iconPreview="@drawable/key_keyboard_close_n"
            android:isModifier="true"/>
        <Key android:keyWidth="19.8%p" android:codes="@integer/key_global" android:keyIcon="@drawable/key_ch_etc_n" 
            android:isModifier="true"/>
        <Key android:keyWidth="39.8%p" android:codes="@integer/key_space" android:isRepeatable="true" 
            android:keyIcon="@drawable/key_spacebar_1_n" android:isModifier="true"/>
        <Key android:keyLabel="@string/label_dot2_key" android:isModifier="true" />
        <Key android:keyWidth="14.8%p" android:codes="@integer/key_enter" android:keyEdgeFlags="right" 
            android:keyIcon="@drawable/key_enter_bg_n" android:iconPreview="@drawable/key_enter_bg_n"
            android:isModifier="true"/>
    </Row>
</Keyboard>
